--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,6 @@
   font-size: larger;
   color: white;
   padding: 1%;
-  border-radius: 5%;
   font-weight: 700;
   background-color: rgb(27, 122, 231);
   cursor: pointer;
@@ -82,13 +81,13 @@
 
 .nextbutton:hover {
   background-color: rgb(41, 27, 231);
-  font-size: x-large;
+  /* font-size: x-large; */
   transition: all 0.5s;
 }
 
 .nextbutton:not(:hover) {
   background-color: rgb(27, 122, 231);
-  font-size: larger;
+  /* font-size: larger; */
   transition: all 0.5s;
 }
 
@@ -105,6 +104,28 @@
     transform: scale(1.05);
   }
 }
+
+.credits {
+  text-decoration: none;
+  width: 30%;
+  color: white;
+  padding: 1%;
+  background-color: blueviolet;
+  border: solid;
+  font-weight: 900;
+  float: left;
+  text-transform: uppercase;
+  margin-bottom: 5vh;
+  animation: buttonLooper 1s 0.25s alternate infinite;
+}
+
+.atagholder {
+  display: flex;
+  flex-direction: column;
+  justify-content: none;
+  align-items: none;
+}
+
 
 .primary {
   color: black;
@@ -132,6 +153,7 @@ secondary {
   .profilepic {
     transform: translateY(-12vh);
     text-align: center;
+    margin-left: 0%;
   }
 
   .leftside,
@@ -148,7 +170,7 @@ secondary {
     display: flex;
     flex-direction: column;
     transform: translateY(-10vh);
-    margin-left: 5%;
+    margin-left: 0%;
     text-align: center;
   }
 
@@ -172,5 +194,22 @@ secondary {
     cursor: pointer;
     margin-bottom: 5vh;
   }  
+
+  .atagholder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .credits {
+    text-align: center;
+    width: 75%;
+    margin: auto;
+    padding: 1%;
+    float: none;
+    text-transform: uppercase;
+    /* margin-bottom: 5vh; */
+  }
   
 }
